[gd_scene load_steps=4 format=3 uid="uid://dvh5wtwlh0xtn"]

[ext_resource type="Script" path="res://Main Menu/main_menu.gd" id="1_esc8v"]
[ext_resource type="PackedScene" uid="uid://b2g08umhm2j37" path="res://Main Menu/options_menu.tscn" id="2_tkx5i"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_utqeu"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_esc8v")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_utqeu")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -156.0
offset_top = -50.0
offset_right = 156.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="PlayButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Play"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Options"

[node name="OptionsMenu" parent="." instance=ExtResource("2_tkx5i")]
visible = false
layout_mode = 1
